[package]
name = "pcg"
version = "0.1.0"
authors = ["Emily Alice Michael <emilyam@protonmail.com>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "^0.5.1"

[dev-dependencies]
rand = "^0.7.3"
